--- a/src/views/Calculator/calculator.scss
+++ b/src/views/Calculator/calculator.scss
@@ -172,7 +172,7 @@
                                   .MuiSlider-track{
                                       border-top-left-radius: 10px;
                                       border-bottom-left-radius: 10px;
-                                      background: linear-gradient(90deg, #29427a 0%, #004ffe 90%);
+                                      background: linear-gradient(90deg, #bf7d3e 0%, #e77609 90%);
                                       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
                                   }
               
@@ -181,7 +181,7 @@
                                       height: 20px;
                                       background: #161515;
                                       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-                                      border: 3px solid #004ffe;
+                                      border: 3px solid #ff9900;
                                   }
                               }
                           }
